[package]
name = "zip_test"
version = "0.1.0"
edition = "2021"

[lib]
name = "zip_test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
rayon = "1.7.0"
regex = "1.9.5"
zip = "0.6.6"

[profile.bench]
debug = true

#[[bin]]
#name="zip_test"
#path="src/benchmark.rs"

[[bench]]
name="zip_benchmark"
harness = false
